3.0902:
 - Add: Jackpot AI
 - Fix: Idle spies that hit max training on check.
 - Fix: Seizing in Neutral Area fails if passed. (Thanks RO)
 - Add: Custom message for upgrades in code.  (so far, just bleeders. Thanks Tower)
 - Fix: No shortcuts via the forbidden zone.

3.0901:
 - API: Spaceport ship filter includes all relevant tasks.
 - Fix: Parliament actually looks at leader's embassy for max members.
 - Mod: Saben, Diablotin, Cult get some timing changes.

3.0900:
 - Fix: Gratch's Gauntlet on repair, checks spies current status.
 - Mod: Redid Political Propaganda as a constant task.
 - Mod: Cult less effective against planets running propaganda campaigns.
 - Mod: Plan sorting is Glyph-Standard-Module Order

3.0899:
 - Mod: Different speeds for the various Supply Pods.  Smaller the pod, the faster.
 - Add: Supply Pod V
 - Mod: Saben no longer waste attacks on Isolationists.
 - Fix: Stealing planets no longer resets "defenders".
 - Fix: Better checking on lack of resource damage.
 - Mod: Added more spy statistics.
 - Mod: Rescued Comrades have same cooldown as rescuer.

3.0898:
 - Mod: The Dillon Forge can now take a quantity of plans for splitting.
 - Fix: GG & Terra Platforms ignore University Level.
 - Fix: Archeology Level is limited by University Level.
 - Fix: The Dillon Forge is limited by University Level.
 - Fix: Oversight Ministry is limited by University Level.
 - Fix: Citadels now generate Battle Log reports and better email.
 - Mod: Security Ministry Seekers also hit Gratch's Gauntlet.
 - Mod: Observatory Seekers also hit Oracle of Anid and Temple of the Drajilites.
 - API: mass_scuttle_ship available.

3.0897:
 - Fix: SupplyPods ignore University Level.
 - Fix: Deployed Bleeders ignore University Level.
 - Mod: Pods & Bleeders get a boost.
 - Mod: AI don't bother building ships if build time exceeds X time.
 - Add: API call added to docs for spy_training_boost.
 - Fix: Spy training immediately recalculates levels.

3.0896: