@@ -4,6 +4,8 @@
  - Fix: Seizing in Neutral Area fails if passed. (Thanks RO)
  - Add: Custom message for upgrades in code.  (so far, just bleeders. Thanks Tower)
  - Fix: No shortcuts via the forbidden zone.
+ - Fix: Recalled ships ignore fleet speed.
+ - Fix: Snarks splash damage now splash as advertised.
 
 3.0901:
  - API: Spaceport ship filter includes all relevant tasks.
